@@ -13,7 +13,7 @@
 
 <!-- ###CHECKOPTIONS_SECTION### begin -->
 	###STATISTICS_HEADER###
-	<table class="typo3-dblist" id="linkvalidator_statsTable" cellspacing="0" cellpadding="0">
+	<table class="typo3-dblist" id="linkvalidator_statsTable" cellpadding="0">
 		<tr class="t3-row-header">
 			<td>
 				###TOTAL_COUNT_LABEL###
@@ -34,7 +34,7 @@
 
 <!-- ###BROKENLINKS_CONTENT### begin -->
 	###LIST_HEADER###
-	<table class="typo3-dblist" id="linkvalidator_brokenLinksTable" cellspacing="0" cellpadding="0">
+	<table class="typo3-dblist" id="linkvalidator_brokenLinksTable" cellpadding="0">
 		<tr class="t3-row-header">
 			<td></td>
 			<td>###TABLEHEAD_PATH###</td>
